--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="#sobremim">Sobre</a></li>
             <li><a href="#habilidades">Habilidades</a></li>
-            <li><a href="#">Portfolio</a></li>                              <!-- Tenho que fazer o portifolio ainda -->
+            <li><a href="https://github.com/FelipeMendoncaa?tab=repositories">Portfolio</a></li>                              <!-- Tenho que fazer o portifolio ainda -->
             <li><a href="#contato">Contato</a></li> 
             <li><a href="#social">Social</a></li>
         </ul>
@@ -75,7 +75,7 @@
 
 Adoro buscar conhecimento constantemente, seja lendo, assistindo ou fazendo cursos online. E nos momentos de relaxamento, gosto de assistir séries e jogar. Resumindo, sou um jovem de 17 anos que busca crescimento pessoal, equilibrando o aprendizado, a saúde física e o entretenimento.
             </p>
-            <button class="btn-contrato">Contrate-me</button>
+            <button class="btn-contrato" >Contrate-me</button>
         </div>
     </div>
 
